Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-10-20 (SVN):
    * cl_main.c (CL_Disconnect): call Key_EndChat() to not get stuck in
      chat mode.
    * keys.c (Key_ForceDest): now that key_message is guaranteed to be
      set only in game mode, removed its cases. also changed the return
      statements to break for consistency.

2012-10-20 (SVN):
    * made chat_buffer[] and chat_bufferlen static to keys.c. console.c
      will now use the new Key_GetChatBuffer() and Key_GetChatMsgLen()
      accessor functions. renamed the team_message global of hexen2 to
      chat_team as in hexenworld. added Key_EndChat() as a new helper.

2012-10-20 (SVN):
    * vid_dos.h (vmode_t): changed width, height and rowbytes members to
      signed int.

2012-10-20 (SVN):
    * console.c (Con_MessageMode_f, Con_MessageMode2_f): do not set the
      messagemode when not really connected.

2012-10-20 (SVN):
    * allow 8x fsaa in the menu system and the gtk launcher.
    * updated version date stamp to 2012-10-20.

2012-10-15 (SVN):
    * fixed hexenworld after r4989. updated date stamp to 2012-10-15.

2012-10-15 (SVN):
    * Another approach at fixing key_dest.

2012-10-11 (SVN):
    * gl_vidnt.c, vid_mgl4.c, vid_win.c (MapKey): adjust gamekey after
      r4987.
    * updated version date stamp to 2012-10-11.

2012-10-11 (SVN):
    * revert r4374, some keyboard input tweaks (from quakespasm).

2012-10-10 (SVN):
    * moved cfg_unbindall and its registration to cl_main.c. moved the
      config.cfg write of unbindall to Key_WriteBindings(). documented
      the new behavior in the release notes.
    * updated version date stamp to 2012-10-10.

2012-10-10 (SVN):
    * hexen2/host.c, hexenworld/client/cl_main.c: unbindall before
      loading stored bindings (configurable by new cvar cfg_unbindall,
      enabled by default.)
    * hexenworld/client/keys.c (Key_WriteBindings): quote "key".

2012-10-04 (SVN):