@@ -1096,5 +1096,7 @@ void Key_ForceDest (void)
 		forced = false;
 		break;
 	}
+
+	IN_UpdateForKeydest ();
 }
 
