@@ -1278,10 +1278,9 @@ void Host_Frame (float time)
 	if (host_frametime > 0.2)
 		host_frametime = 0.2;
 
-	// force key_dest
-	Key_ForceDest ();
-
 	// get new key events
+	Key_ForceDest ();
+	//IN_UpdateForKeydest ();
 	Sys_SendKeyEvents ();
 
 	// allow mice or other external controllers to add commands
