@@ -1119,5 +1119,7 @@ void Key_ForceDest (void)
 		forced = false;
 		break;
 	}
+
+	IN_UpdateForKeydest ();
 }
 
